fix spacing after link

--- a/assets/css/_content.scss
+++ b/assets/css/_content.scss
@@ -131,6 +131,10 @@
 			}
 		}
 
+    span.external-inline {
+      display: inline-block;
+    }
+
 		ul {
 			list-style: square;
 			margin-left: 20px;
